<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:id="@+id/main_layout">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tableLayout">

        <TableLayout
            android:layout_width="357dp"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:text="@string/cabecera"
                    android:id="@+id/tvCabecera"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/sin_valores"
                    android:id="@+id/tvPorDefecto" />

            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/latitud"
                    android:id="@+id/textView4"
                    style="@style/descripcion" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:inputType="numberDecimal"
                    android:id="@+id/tvLatitud"
                    android:background="#ffc4ff97"
                    android:hint="@string/latitud" />

            </TableRow>


            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/longitud"
                    android:id="@+id/textView5"
                    style="@style/descripcion" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:inputType="numberDecimal"
                    android:id="@+id/tvLongitud"
                    android:background="#ff55d7ff"
                    android:hint="@string/longitud" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/precision"
                    android:id="@+id/textView3"
                    style="@style/descripcion" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/tvPrecision"
                    android:hint="@string/precision"
                    android:background="#96ffc72d" />

            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:text="@string/altura"
                    android:id="@+id/textView2"
                    style="@style/descripcion" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/tvAltura"
                    android:hint="@string/altura"
                    android:background="#ffedbcff" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="MAPA"
                    android:id="@+id/btt_mapa"
                    android:layout_column="8" />

            </TableRow>

        </TableLayout>

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

            </TableRow>

        </TableLayout>

    </TableLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="DIRECCION"
        android:id="@+id/button"
        android:layout_alignTop="@+id/btt_proveedores"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#b5fb92" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/tv_direccion"
        android:layout_below="@+id/button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="Aqui se mostrarán los datos de la dirección" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/tv_datosProveedor"
        android:layout_below="@+id/tv_direccion"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SIG. PROV"
        android:id="@+id/btt_proveedores"
        android:background="#38c1fc"
        android:layout_alignTop="@+id/btt_estadoProv"
        android:layout_toRightOf="@+id/button"
        android:layout_toEndOf="@+id/button"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="MEJOR PROV"
        android:id="@+id/btt_mejorProv"
        android:background="#f4b556"
        android:layout_below="@+id/tableLayout"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ESTADO PROV"
        android:id="@+id/btt_estadoProv"
        android:background="#e0b4e7"
        android:layout_alignTop="@+id/btt_mejorProv"
        android:layout_toRightOf="@+id/btt_mejorProv"
        android:layout_toEndOf="@+id/btt_mejorProv"
        android:layout_marginLeft="60dp"
        android:layout_marginStart="60dp" />

</RelativeLayout>
